force-app/src/objects/cpm__Custom_Remote_Site_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Registration of the remote site settings that needs to be implemented</description>
    <fields>
        <fullName>cpm__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wether the custom remote site setting is activated or not.</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Provided_By__c</fullName>
        <description>The Package the Setting belongs to.</description>
        <label>Provided By</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__URL__c</fullName>
        <description>The endpoint of the custom remote site setting.</description>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cpm__Uses_Metadata_API__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true is this remote site setting used the metadata api.</description>
        <label>Uses Metadata API</label>
        <type>Checkbox</type>
    </fields>
    <label>Custom Remote Site Setting</label>
</CustomObject>